--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include 'day06'
 include 'day08'
 include 'day09'
 include 'day11'
+include 'day12'
 include 'day13'
 include 'day18'
 include 'day22'
