Add template for Day 19

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ include 'day11'
 include 'day12'
 include 'day13'
 include 'day18'
+include 'day19'
 include 'day22'
 include 'day24'
 include 'day25'
