Add template for Day 15

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include 'day09'
 include 'day11'
 include 'day12'
 include 'day13'
+include 'day15'
 include 'day18'
 include 'day19'
 include 'day22'
